# chatApp-Server

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  chat_line.cpp  chat_protocol.cpp  chat_protocol.h  client_chat_window.cpp  client_main.cpp  cmake_install.cmake  database_setup.md  local_database.session.sql  onlineDB.session.sql  server  server_app  style.css
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.rcc/: client_images.qrc  qrc_client_images.cpp
chat/: CMakeLists.txt
chat/clients/: CMakeLists.txt  chat_line.cpp  chat_protocol.cpp  chat_protocol.h  client_chat_window.cpp  client_chat_window.h  client_main.cpp  client_main_window.cpp  client_main_window.h  client_manager.cpp  client_manager.h
chat/database/: CMakeLists.txt  database.cpp  database.h
chat/server/: CMakeLists.txt  chat_line.cpp  chat_line.h  chat_protocol.cpp  chat_protocol.h  server_chat_window.cpp  server_chat_window.h  server_main.cpp  server_main_window.cpp  server_main_window.h  server_manager.cpp  server_manager.h
server_src/: CMakeLists.txt  chat_protocol.h  server_main_window.cpp  server_manager.cpp
server_src/database/: database.cpp  database.h
src/app/: CMakeLists.txt  build.sh  client.sh  run_1.sh  run_2.sh  run_3.sh  server.sh
src/app/client_1/: CMakeLists.txt  client_1.cpp  client_1_window.cpp  client_1_window.h
src/app/client_2/: CMakeLists.txt  client_2.cpp  client_2_window.cpp  client_2_window.h
src/app/client_3/: CMakeLists.txt  client_3.cpp  client_3_window.cpp  client_3_window.h
src/app/clients/: CMakeLists.txt  client.cpp  client_chat.cpp  client_chat.h  client_manager.cpp  client_manager.h  client_window.cpp  client_window.h
src/app/server/: CMakeLists.txt  chat.cpp  chat_window.cpp  chat_window.h  server.cpp  server_manager.cpp  server_manager.h  server_window.cpp  server_window.h
src/clients/: CMakeCache.txt  CMakeLists.txt  Info.plist  Makefile  chat_line.cpp  chat_line.h  chat_protocol.cpp  chat_protocol.h  client.html  client.js  client_chat_window.cpp  client_chat_window.h  client_main.cpp  client_main_window.cpp  client_main_window.h  client_manager.cpp  client_manager.h  cmake_install.cmake  style.css
src/clients/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/clients/.rcc/: client_images.qrc  qrc_client_images.cpp
src/clients/client_autogen/: deps  moc_predefs.h
src/clients/client_autogen/EWIEGA46WW/: moc_chat_line.cpp  moc_chat_line.cpp.d  moc_chat_protocol.cpp  moc_chat_protocol.cpp.d  moc_client_chat_window.cpp  moc_client_chat_window.cpp.d  moc_client_main_window.cpp  moc_client_main_window.cpp.d  moc_client_manager.cpp  moc_client_manager.cpp.d
src/database/: CMakeLists.txt  database.cpp  database.h
src/server/: CMakeLists.txt  chat_line.cpp  chat_line.h  chat_protocol.cpp  chat_protocol.h  server.html  server.js  server_chat_window.cpp  server_chat_window.h  server_main.cpp  server_main_window.cpp  server_main_window.h  server_manager.cpp  server_manager.h
src/server/.qt/rcc/: qrc_images.cpp
src/server/.rcc/: images.qrc  qrc_images.cpp
